--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
     <div class="flex flex-col">
       <div id="home" class="bg-contain bg-center h-96 " style="background-image: url('images/header.jpg') "></div>
-      <div class="shadow-lg m-[3pc] bg-[#f3faf2] rounded-md">
+      <div class="shadow-lg lg:m-[3pc] bg-[#f3faf2] rounded-md">
             <p id="intr" class="px-5 text-4xl font-semibold m-6 text-center pb-8 lg:pb3 pt-2 lg:pt-0">The Web</p>
             <div class="">
                 <p class="text-4xl ml-5">Introduction</p>
@@ -189,7 +189,7 @@
                      </p>
                       
                 </div>
-                <div class="flex lg:flex-row flex-col pb-[100px] lg:pt-0 pt-12">
+                <div class="flex lg:flex-row flex-col pb-[100px] lg:pt-0 pt-[100px]">
                     <div class="mx-auto space-x-6 fa-2xl relative">
                         <a href="https://www.instagram.com/reysabiormdn?igsh=MTZ0aXphdmw0MGwxNw==" class="group relative">
                             <i class="fa-brands fa-instagram hover:shadow-[0_0_15px_rgba(255,255,255,1)] hover:text-blue-500 transition duration-300"></i>
