--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="bg-green-100"  >
     <div class="flex lg:flex-row flex-col justify-between px-7 sticky top-0 w-full shadow-md bg-white z-50 lg:py-0 py-4 space-y-2 lg:space-y-0">
-      <p class="lg:py-5 lg:text-left text-center text-xl lg:text-md font-semibold lg:font-normal">Rey Sabio Ramadhan</p>
+      <p class="lg:py-5 xl:text-left text-center text-xl lg:text-md font-semibold lg:font-normal">Rey Sabio Ramadhan</p>
       <div class="flex flex-row space-x-4 lg:py-5 mx-auto lg:mx-0">    
         <a href="#home">Home</a>
         <a href="#intr">Introduction</a>
